unpackaged/objects/BOM__c.object
<CustomObject>
  <fields>
    <fullName>Discount_Value__c</fullName>
    <formula>Unit_price__c * Quantity__c - Row_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bill of Material</relationshipLabel>
    <relationshipName>Bill_of_Material</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Product_bundle__c</fullName>
    <label>Product bundle</label>
    <referenceTo>Product_bundle__c</referenceTo>
    <relationshipLabel>Bill of Material</relationshipLabel>
    <relationshipName>Bill_of_Material</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Row_price__c</fullName>
    <formula>Quantity__c *  Unit_price__c *(1- Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Row price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Unit_price__c</fullName>
    <label>Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <label>Bill of Material</label>
  <nameField>
    <label>Bill of Material Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Bill of Material</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>